--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"express": "^4.12.4",
 		"mongodb": "2.2.9",
 		"body-parser": "^1.15.2",
-		"underscore": "^1.8.3"
+		"underscore": "^1.8.3",
+		"config": "1.21.0"
 	},
 	"engines": {
 		"node": "4.4.3"
